# plutus-pioneer

./: cabal.project  flake.nix  pioneer4.cabal
assets/: NegativeRTimed.plutus  customtypes.plutus  fortytwotyped.plutus
src/Pioneer/: Plutus.hs  Util.hs
src/Pioneer/Week02/: Burn.hs  CustomTypes.hs  FortyTwo.hs  FortyTwoTyped.hs  Gift.hs  Homework1.hs  Homework2.hs
src/Pioneer/Week03/: Homework1.hs  Homework2.hs  ParameterizedVesting.hs  Vesting.hs
src/Pioneer/Week05/: Free.hs  Homework1.hs  Homework2.hs  NFT.hs  Signed.hs
src/Pioneer/Week06/: ExploitableSwap.hs  NegativeRTimed.hs  NegativeRTimed.ts  PSM.hs  PTNegativeRTimed.hs  PatchedSwap.hs  State.hs  TExploitableSwap.hs  UTNegativeRTimed.hs
src/Pioneer/Week09/: Oracle.hs
