cabal-version:      3.0
name:               pioneer4
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Eric Macaulay
maintainer:         eric@whetztone.net
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: 
        -Wall -fobject-code -fno-ignore-interface-pragmas 
        -fno-omit-interface-pragmas

library
    import:           common
    exposed-modules:  
        Pioneer.Plutus
        Pioneer.Util
        Pioneer.Week02.Gift
        Pioneer.Week02.Burn
        Pioneer.Week02.FortyTwo
        Pioneer.Week02.FortyTwoTyped
        Pioneer.Week02.CustomTypes
        Pioneer.Week02.Homework1
        Pioneer.Week02.Homework2
        Pioneer.Week03.Vesting
        Pioneer.Week03.ParameterizedVesting
        Pioneer.Week03.Homework1
        Pioneer.Week03.Homework2
        Pioneer.Week05.Free
        Pioneer.Week05.Signed
        Pioneer.Week05.NFT 
        Pioneer.Week05.Homework1
        Pioneer.Week05.Homework2
        Pioneer.Week06.State 
        Pioneer.Week06.PSM
        Pioneer.Week06.NegativeRTimed
        Pioneer.Week06.UTNegativeRTimed
        Pioneer.Week06.PTNegativeRTimed
        Pioneer.Week06.ExploitableSwap
        Pioneer.Week06.TExploitableSwap
        Pioneer.Week06.PatchedSwap

    -- other-modules:
    hs-source-dirs:   src
    build-depends:    
          base ^>=4.14.3.0
        , bytestring
        , base16-bytestring
        , text
        , time
        , serialise
        , aeson
        , mtl
        , plutus-simple-model
        , QuickCheck
        , tasty
        , tasty-quickcheck
        , cardano-api
        , cardano-binary
        , cardano-ledger-core
        , cardano-node-emulator
        , plutus-contract
        , plutus-core
        , plutus-ledger
        , plutus-ledger-api
        , plutus-script-utils
        , plutus-tx
        , plutus-tx-constraints
        , plutus-tx-plugin
    default-extensions:
          DataKinds
        , DeriveAnyClass
        , DeriveGeneric
        , FlexibleInstances
        , ImportQualifiedPost
        , InstanceSigs
        , LambdaCase
        , MultiParamTypeClasses
        , NumericUnderscores
        , OverloadedStrings
        , RecordWildCards
        , ScopedTypeVariables
        , TemplateHaskell
        , TypeApplications
        , TypeFamilies
    -- other-extensions:
    
    
    default-language: Haskell2010
